# embedded-rust-tutorial

./: .gitignore  BUILD.md  CLAUDE.md  Cargo.toml  Makefile  README.md  VALIDATION_README.md  book.toml  code_example_fixer.py  code_fix_report.md  code_test_report.md  comprehensive_validation_suite.py  content_analysis.py  content_analysis_report.json  content_splitter.py  content_structure_mapping.md  content_validation_system.py  cross_reference_fixer.py  cross_reference_report.json  debug_splitter.py  embedded-rust-tutorial-master.md  embedded-rust-tutorial-restructured.md  embedded-rust-tutorial.md  final_comprehensive_validator.py  final_validation_report.md  final_validation_results.json  integration_test_report.md  integration_test_results.json  integration_test_suite.py  link_validation_report.json  link_validation_summary.md  link_validator.py  mdbook_content_validator.py  mdbook_test_report.json  mdbook_test_results.json  mdbook_test_summary.md  mdbook_validation_report.md  mdbook_validation_results.json  memory.x  redundancy_detector.py  (+23 more)
.cargo/: config.toml
.github/workflows/: deploy.yml  pages.yml  release.yml  test.yml
.kiro/specs/compilable-rust-examples/: design.md  requirements.md  tasks.md
.kiro/specs/embedded-rust-tutorial-improvement/: design.md  requirements.md  tasks.md
.kiro/specs/mdbook-conversion/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
examples/: multi_target_demo.rs
scripts/: build.sh  ci_local_test.sh  dev.sh  validate.sh
src/: SUMMARY.md  code_extractor.rs  dependency_resolver.rs  error_recovery.rs  example_tester.rs  integration_tests.rs  introduction.md  lib.rs  preprocessor.rs  test_config.rs  toolchain_manager.rs
src/core-concepts/: README.md  advanced-types.md  error-handling.md  functional.md  key-differences-from-c.md  learning-path.md  memory-model.md  ownership.md  quick-reference-links.md  safety.md  type-system-advantages-for-security.md  type-system.md
src/cryptography/: README.md  constant-time.md  hardware-crypto.md  key-management.md  rustcrypto-examples.md  secure-patterns.md  side-channels.md
src/embedded-patterns/: README.md  dma-integration.md  hardware-abstraction.md  interrupts.md  no-std.md  static-memory.md
src/environment-setup/: README.md  build-config.md  installation.md  project-structure.md  quick-setup-checklist.md  target-config.md  verification.md
src/migration/: README.md  debugging.md  ffi-integration.md  performance.md  strategies.md  testing.md
src/preprocessor/: tests.rs
src/quick-reference/: README.md  control-flow.md  crypto-reference.md  embedded-reference.md  error-handling.md  gotchas.md  memory-patterns.md  syntax-mapping.md
tests/: mdbook_integration_test.rs
theme/: cortex-r5-playground.js  custom.css  custom.js
validation_output/: code_validation_report.md  comprehensive_validation_report.md  cross_reference_report.json  redundancy_report.json  validation_summary.json
