[package]
name = "embedded-rust-tutorial-validation"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies for validation framework
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
tempfile = "3.0"
md5 = "0.7"

# Embedded dependencies (optional)
cortex-m = { version = "0.7", optional = true }
cortex-m-rt = { version = "0.7", optional = true }
panic-halt = { version = "0.2", optional = true }
heapless = { version = "0.7", optional = true }
zeroize = { version = "1.6", default-features = false, optional = true }

[features]
default = ["std"]
std = ["serde/std", "serde_json/std"]
embedded = ["cortex-m", "cortex-m-rt", "panic-halt", "heapless", "zeroize"]

[profile.dev]
debug = true
opt-level = "s"

[profile.release]
debug = true
opt-level = "s"
lto = true
codegen-units = 1

[[bin]]
name = "validate_new_content"
path = "validate_new_content.rs"

[[bin]]
name = "test_math_safety"
path = "test_math_safety.rs"

[[bin]]
name = "rust_example_tester"
path = "src/bin/rust_example_tester.rs"

[[bin]]
name = "mdbook-rust-examples"
path = "src/bin/mdbook-rust-examples.rs"